--- a/requirements.txt
+++ b/requirements.txt
@@ -7,41 +7,39 @@ charset-normalizer==3.3.2
 contourpy==1.2.0
 cycler==0.10.0
 Cython==3.0.6
+docker==6.1.3
 flatbuffers==23.5.26
 fonttools==4.46.0
 gast==0.4.0
-google-api-core==2.14.0
-google-api-python-client==2.109.0
-google-auth==2.25.0
-google-auth-httplib2==0.1.1
+gin-config==0.5.0
+google-auth==2.25.1
 google-auth-oauthlib==1.0.0
 google-pasta==0.2.0
-googleapis-common-protos==1.61.0
 grpcio==1.59.3
 h5py==3.10.0
-httplib2==0.22.0
 idna==2.10
+kaggle==1.3.9
 keras==2.13.1
 kiwisolver==1.4.5
 libclang==16.0.6
 lvis==0.5.3
-lxml==4.9.3
 Markdown==3.5.1
 MarkupSafe==2.1.3
 matplotlib==3.8.2
+ml-dtypes==0.2.0
 numpy==1.24.3
-oauth2client==4.1.3
 oauthlib==3.2.2
 opencv-python==4.8.1.78
 opencv-python-headless==4.8.0.74
 opt-einsum==3.3.0
 packaging==23.2
-Pillow==10.1.0
-protobuf==4.25.1
+Pillow==9.4.0
+protobuf==4.23.4
+protos==0.1.0
+psutil==5.4.3
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
 pycocotools==2.0.7
-PyDrive==1.3.1
 pyparsing==2.4.7
 python-dateutil==2.8.2
 python-dotenv==1.0.0
@@ -63,10 +61,11 @@ tensorflow-io==0.34.0
 tensorflow-io-gcs-filesystem==0.34.0
 tensorflow-macos==2.13.0
 termcolor==2.4.0
+tf-models-official==2.15.0
 tf-slim==1.1.0
 tqdm==4.66.1
 typing_extensions==4.5.0
-uritemplate==4.1.1
 urllib3==2.1.0
+websocket-client==1.7.0
 Werkzeug==3.0.1
-wrapt==1.16.0
+wrapt==1.14.1
